# Computational-Graph

./: .gitignore  CMakeLists.txt  NewFeature.md  Notes.md  README.md  Task.md  developer.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp
Raw/: CMakeLists.txt  DivCNode.cpp  DivCNode.h  MinCNode.cpp  MinCNode.h  MulCNode.cpp  MulCNode.h  PluCNode.h  advanced_calc_pack.h  basic_calc_pack.h  calcnode.h  comgraph.h  compare_calc_pack.h  connode.h  coscnode.cpp  coscnode.h  divcnode.cpp  divcnode.h  doucnode.cpp  doucnode.h  expcnode.h  gtcnode.cpp  gtcnode.h  logcnode.h  main.cpp  mincnode.cpp  mincnode.h  mulcnode.cpp  mulcnode.h  node.h  phnode.h  plucnode.cpp  plucnode.h  prinode.h  sigcnode.h  sincnode.cpp  sincnode.h  singcnode.cpp  singcnode.h  tancnode.cpp  (+3 more)
Raw/advanced_calc_pack/: advanced_calc_pack.h  gtcnode.h  logcnode.cpp  logcnode.h  sigcnode.cpp  sigcnode.h  sincnode.h  tanhcnode.cpp  tanhcnode.h
Raw/basic_calc_pack/: CMakeLists.txt  basic_calc_pack.h  divcnode.h  mincnode.cpp  mulcnode.h  plucnode.h
Raw/compare_calc_pack/: CMakeLists.txt  gtcnode.h  lscnode.h
Raw/lib/: calcnode.cpp  calcnode.h  comgraph.cpp  node.h  phnode.cpp  phnode.h  prinode.h
advanced_calc_pack/: CMakeLists.txt  Notes.md  advanced_calc_pack.h  expcnode.cpp  expcnode.h  logcnode.h  sigcnode.h  sincnode.h  tanhcnode.h
basic_calc_pack/: CMakeLists.txt  Notes.md  basic_calc_pack.h  divcnode.cpp  divcnode.h  mincnode.h  mulcnode.h  plucnode.h
compare_calc_pack/: CMakeLists.txt  Notes.md  compare_calc_pack.h  condnode.cpp  condnode.h  eqcnode.cpp  eqcnode.h  gecnode.cpp  gecnode.h  (+6 more)
(+21 files in other folders)
